# pindata

./: .gitignore  .gitmodules  CLAUDE.md  DATAFLOW_INTEGRATION_SUMMARY.md  Procfile  README.md  README_CN.md  alembic.ini  build_and_push.sh  cleanup.sh  dataflow_integration.py  install_dependencies.sh  reset_dataflow_tables.sql  run.py  start.sh
Dataflow/: .gitignore  MANIFEST.in  README-dev.md  README-zh.md  README.md  pyproject.toml  pytest.ini  requirements-kbc.txt  requirements-muxi.txt  requirements-text.txt  requirements.txt
Dataflow/.github/ISSUE_TEMPLATE/: 1-bug-reports.yaml  2-ask-for-help.yaml  3-feature-request.yaml
Dataflow/.github/workflows/: python-publish.yml  test.yml
Dataflow/dataflow/: __init__.py  cli.py  logger.py  version.py
Dataflow/dataflow/agent/agentrole/: __init__.py  (+4 more)
Dataflow/dataflow/cli_funcs/: __init__.py  cli_env.py  cli_init.py  copy_funcs.py  paths.py
Dataflow/dataflow/core/: LLMServing.py  Operator.py  __init__.py
Dataflow/dataflow/operators/: __init__.py
Dataflow/dataflow/prompts/: agenticrag.py  general_text.py  kbcleaning.py  multihopqa.py  reasoning.py  text2sql.py
Dataflow/dataflow/scripts/: README.md
Dataflow/dataflow/serving/: APILLMServing_aisuite.py  APILLMServing_request.py  GoogleAPIServing.py  LocalModelLLMServing.py  __init__.py
Dataflow/dataflow/utils/: __init__.py  kbcleaning.py  registry.py  storage.py  utils.py
Dataflow/test/: bad_case_text2sql.py  conftest.py  test_agentic_rag.py  test_dataflow_agent.py  test_dockbcleaning.py  test_general_text.py  test_general_text_refine.py  test_pdfkbcleaning.py  test_pipelines.py  test_pt_filter.py  test_pt_synthetic.py  test_reasoning.py  test_reasoning_pretrain.py  test_sft_filter.py  test_sft_synthetic.py  test_taskcraft.py  test_text2sql.py  test_urlkbcleaning.py
Dataflow/test/cpu_only/: test_db_storage_and_operator.py  test_register.py  test_remote_load.py
(+571 files in other folders)
